<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyStatus">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="124dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/winterfee2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/fallfee2"
                android:layout_centerVertical="true"
                android:text="Winter Tuition Fee:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/winterfee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/summerfee"
                android:layout_centerVertical="true"
                android:text="$0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/summerfee2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/fallfee2"
                android:layout_marginBottom="26dp"
                android:text="Summer Tuition Fee:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/summerfee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/summerfee2"
                android:layout_marginEnd="106dp"
                android:text="$0"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fallfee2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="Fall Tuition Fee:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/fallfee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/winterfee"
                android:layout_alignTop="@+id/fallfee2"
                android:text="$0"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="My Status"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="108dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalcreait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/totalcreait2"
                android:layout_toEndOf="@+id/SName2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalcreait2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/SName2"
                android:layout_marginBottom="20dp"
                android:text="Total Credit:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SID2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/SName2"
                android:layout_centerVertical="true"
                android:text="Student Banner:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="180dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:text="Student Name:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/SName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/SID"
                android:layout_alignTop="@+id/SName2"
                android:textSize="18sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>